--- a/src/myerp-model/pom.xml
+++ b/src/myerp-model/pom.xml
@@ -64,7 +64,12 @@
 			<artifactId>mockito-junit-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+		    <groupId>org.assertj</groupId>
+		    <artifactId>assertj-core</artifactId>
+		    <scope>test</scope>
+		</dependency>
+			
 		<!-- ===== JSR 303 - Bean validation ===== -->
 		<!-- implementation -->
 		<dependency>
