refactoring des tests JUnit 4 -> JUnit 5
Modification du business/pom pour inclure mockito et assertj
Modification du pom pour inclire jacoco

--- a/src/pom.xml
+++ b/src/pom.xml
@@ -394,6 +394,31 @@
 					<artifactId>build-helper-maven-plugin</artifactId>
 					<version>1.10</version>
 				</plugin>
+				
+				<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.6</version>
+				<configuration>
+                    <excludes>
+                        <exclude>**/src/test/java</exclude>
+                    </excludes>
+                </configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
