--- a/src/myerp-business/pom.xml
+++ b/src/myerp-business/pom.xml
@@ -53,6 +53,10 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>myerp-consumer</artifactId>
         </dependency>
+        <dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>myerp-technical</artifactId>
+		</dependency>
 
         <!-- ===== Spring JDBC/Tx ===== -->
         <!-- spring-tx : transaction, JCA, DAO -->
@@ -98,8 +102,13 @@
             <artifactId>postgresql</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        <!-- ===== JAXB for JAVA 11 ===== -->
+        <dependency>
+			    <groupId>javax.xml.bind</groupId>
+			    <artifactId>jaxb-api</artifactId>
+			    </dependency>
     </dependencies>
-
 
     <!-- =============================================================== -->
     <!-- Profiles -->
