--- a/src/pom.xml
+++ b/src/pom.xml
@@ -265,6 +265,12 @@
 			    <scope>test</scope>
 			</dependency>
 			
+			<!-- ===== JAXB for JAVA 11 ===== -->
+			<dependency>
+			    <groupId>javax.xml.bind</groupId>
+			    <artifactId>jaxb-api</artifactId>
+			    <version>2.3.1</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
