Configuration plugin jacoco

--- a/src/myerp-business/pom.xml
+++ b/src/myerp-business/pom.xml
@@ -151,10 +151,15 @@
         </profile>
     </profiles>
 
-
     <!-- =============================================================== -->
     <!-- Build -->
     <!-- =============================================================== -->
     <build>
+    	<plugins>
+		    <plugin>
+			    <groupId>org.jacoco</groupId>
+			    <artifactId>jacoco-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
     </build>
 </project>
