--- a/src/myerp-model/pom.xml
+++ b/src/myerp-model/pom.xml
@@ -84,5 +84,11 @@
 	<!-- Build -->
 	<!-- =============================================================== -->
 	<build>
+		<plugins>
+		    <plugin>
+			    <groupId>org.jacoco</groupId>
+			    <artifactId>jacoco-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
 	</build>
 </project>
