correction des pom pour jacoco

--- a/src/myerp-consumer/pom.xml
+++ b/src/myerp-consumer/pom.xml
@@ -125,5 +125,11 @@
     <!-- Build -->
     <!-- =============================================================== -->
     <build>
+    	<plugins>
+		    <plugin>
+			    <groupId>org.jacoco</groupId>
+			    <artifactId>jacoco-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
     </build>
 </project>
