--- a/src/myerp-technical/pom.xml
+++ b/src/myerp-technical/pom.xml
@@ -121,5 +121,11 @@
     <!-- Build -->
     <!-- =============================================================== -->
     <build>
+    	<plugins>
+		    <plugin>
+			    <groupId>org.jacoco</groupId>
+			    <artifactId>jacoco-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
     </build>
 </project>
