--- a/src/pom.xml
+++ b/src/pom.xml
@@ -353,6 +353,43 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.22.2</version>
+					<configuration>
+						<skipTests>true</skipTests>
+					</configuration>
+					<executions>
+						<execution>
+							<id>unit-tests</id>
+							<phase>test</phase>
+							<goals>
+								<goal>test</goal>
+							</goals>
+							<configuration>
+								<skipTests>false</skipTests>
+								<includes>
+									<include>**/*Test.java</include>
+								</includes>
+							</configuration>
+						</execution>
+						<execution>
+							<id>integration-tests</id>
+							<phase>integration-test</phase>
+							<goals>
+								<goal>test</goal>
+							</goals>
+							<configuration>
+								<skipTests>false</skipTests>
+								<includes>
+									<include>**/*IT.java</include>
+								</includes>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+
+				<plugin>
+				    <groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-failsafe-plugin</artifactId>
+				    <version>3.0.0-M5</version>
 				</plugin>
 
 				<!-- ===== Plugin d'analyse de code Checkstyle ===== -->
@@ -405,9 +442,15 @@
 				<plugin>
 					<groupId>org.jacoco</groupId>
 					<artifactId>jacoco-maven-plugin</artifactId>
-						<version>0.8.6</version>
+					<version>0.8.6</version>
+					<configuration>
+						<excludes>
+							<exclude>**/com/dummy/myerp/technical/**</exclude>
+						</excludes>
+					</configuration>
 					<executions>
 						<execution>
+							<id>prepare-agent</id>
 							<goals>
 								<goal>prepare-agent</goal>
 							</goals>
@@ -417,6 +460,19 @@
 							<phase>test</phase>
 							<goals>
 								<goal>report</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>prepare-agent-integration</id>
+							<goals>
+								<goal>prepare-agent-integration</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>report-integration</id>
+							<phase>test</phase>
+							<goals>
+								<goal>report-integration</goal>
 							</goals>
 						</execution>
 					</executions>
