--- a/src/pom.xml
+++ b/src/pom.xml
@@ -461,6 +461,8 @@
 					<configuration>
 						<excludes>
 							<exclude>**/com/dummy/myerp/technical/**</exclude>
+							<exclude>**/com/dummy/myerp/business/impl/*.*</exclude>
+							<exclude>**/com/dummy/myerp/model/bean/comptabilite/SequenceEcritureComptable.java</exclude>
 						</excludes>
 					</configuration>
 					<executions>
