--- a/src/pom.xml
+++ b/src/pom.xml
@@ -148,7 +148,7 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
-						<includes>
+							<includes>
 								<include>**/it/*IT.java</include>
 							</includes>
 							<excludes>
@@ -161,16 +161,15 @@
 						<artifactId>jacoco-maven-plugin</artifactId>
 						<executions>
 							<execution>
-								<phase>test</phase>
 								<goals>
-									<goal>prepare-agent-integration</goal>
+									<goal>prepare-agent</goal>
 								</goals>
 							</execution>
 							<execution>
-								<id>report-integration</id>
+								<id>report</id>
 								<phase>test</phase>
 								<goals>
-									<goal>report-integration</goal>
+									<goal>report</goal>
 								</goals>
 							</execution>
 						</executions>
@@ -491,7 +490,17 @@
 						<goal>test</goal>
 					</goals>
 				</plugin>
-
+				<plugin>
+				    <groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-failsafe-plugin</artifactId>
+				    <version>2.22.2</version>
+				    <goals>
+				    	<goal>test</goal>
+				    	<goal>integration-test</goal>
+				    	<goal>verify</goal>
+				    </goals>
+				</plugin>
+			
 				<!-- ===== Plugin d'analyse de code Checkstyle ===== -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
