--- a/src/pom.xml
+++ b/src/pom.xml
@@ -53,7 +53,7 @@
 
 		<!-- ===== Version properties ===== -->
 		<log4j.version>2.8.1</log4j.version>
-		<spring.version>4.3.7.RELEASE</spring.version>
+		<spring.version>5.3.2</spring.version>
 		
 		<!-- Tests and Coverage properties -->
 		<skip.unit.tests>false</skip.unit.tests>
@@ -376,6 +376,14 @@
 			</dependency>
 
 			<!-- ===== Test unitaires ===== -->
+			<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+			<dependency>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-test</artifactId>
+			    <version>${spring.version}</version>
+			    <scope>test</scope>
+			</dependency>
+			
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter</artifactId>
